# Python55

./: .pre-commit-config.yaml  PYTHON_EXAM.py  README.md  date_utils.py  git_task1.py  homework.py  homework11-12.py  homework13-14.py  homework15-16.py  homework17-18.py  homework19-20.py  homework21-22.py  homework23-24.py  homework25-26.py  homework27-28.py  homework29-30.py  homework3-4.py  homework31-32.py  homework33-34.py  homework5-6.py  homework7-8.py  homework9-10.py  homework_files.py  homework_files.txt  homework_files_task1.txt  homework_func.py  homework_func6.py  homework_json1.py  homework_korteji1.py  homework_korteji2.py  homework_korteji3.py  homework_korteji4.py  homework_oop1.py  homework_oop2.py  homework_oop3.py  homework_oop4.py  homework_oop5.py  homework_oop6.py  homework_pickle.py  homework_python.py  (+68 more)
SQL/: HOMEWORK_SQL1.sql  HOMEWORK_SQL2.sql  HOMEWORK_SQL3.sql  HOMEWORK_SQL4.sql  PRAC_SQL1.sql  PRAC_SQL2.sql  PRAC_SQL3.sql  PRAC_SQL4.sql  redis_homework  redis_lesson
docker_books/: Dockerfile  application.py  books.json  docker-compose.yml  main.py  settings.py
docker_folder/: lesson_server3.py  requirements.txt
docker_homework/: homework_server3.py
docker_homework1/: Dockerfile  main.py
docker_homework2/: Dockerfile  films.json  settings.py
docker_homework3/: Dockerfile  application.py  docker-compose.yml  main.py  requirements.txt  settings.py
docker_lesson1/: Dockerfile  application.py  main.py
docker_lesson2/: Dockerfile  main.py  setting.py
docker_lesson3/: Dockerfile  docker-compose.yml  main.py  settings.py
(+18 files in other folders)
