[project]
name = "Python+AI55"
version = "0.1.0"
description = "ITStep course for students"
requires-python = ">=3.10"

#[tool.ruff]
#line-length = 88
#target-version = "py311"
#fix = true
#
#[tool.ruff.lint]
#select = ["E", "F", "W", "I", "B", "UP"]
#
#ignore = [
#    "E203"
#]
#
#[tool.ruff.format]
#quote-style = "double"
#indent-style = "space"
#
#[tool.mypy]
#python_version = "3.11"
#ignore_missing_imports = true
#strict_optional = true
#warn_unused_ignores = true
#warn_return_any = true
#warn_unused_configs = true
